--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -10,12 +10,46 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="../style.css"
+		/>
 		<title>About Me</title>
 	</head>
 
 	<body>
-		<h1>About Me</h1>
-		<a href="../index.html">Homepage</a>
-		<a href="article.html">Article</a>
+		<header>
+			<nav>
+				<div class="logo_container">
+					<img
+						src="../images/logo.png"
+						alt="My learning journal logo"
+						width="34px"
+					/>
+					<p>My learning journal</p>
+				</div>
+				<ul class="flex flex_row">
+					<li><a href="../index.html">HOME</a></li>
+					<li><a href="aboutme.html">ABOUT ME</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<main></main>
+
+		<footer></footer>
 	</body>
 </html>
