feat: init homepage

--- a/index.html
+++ b/index.html
@@ -2,58 +2,112 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta
-			http-equiv="X-UA-Compatible"
-			content="IE=edge"
-		/>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<link
-			rel="preconnect"
-			href="https://fonts.googleapis.com"
-		/>
-		<link
-			rel="preconnect"
-			href="https://fonts.gstatic.com"
-			crossorigin
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			rel="stylesheet"
-			href="style.css"
-		/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="style.css" />
 		<title>Learning Journal</title>
 	</head>
 
 	<body>
-		<header>
-			<nav>
-				<div class="logo_container">
-					<img
-						src="images/logo.png"
-						alt="My learning journal logo"
-						width="34px"
-					/>
-					<p>My learning journal</p>
+		<div class="wrapper">
+			<header>
+				<nav>
+					<div class="logo_container">
+						<img src="images/logo.png" alt="My learning journal logo" width="34px" />
+						<p>My learning journal</p>
+					</div>
+					<ul class="flex flex_row">
+						<li><a href="index.html">HOME</a></li>
+						<li><a href="pages/aboutme.html">ABOUT ME</a></li>
+					</ul>
+				</nav>
+			</header>
+
+			<main>
+				<div class="main_article">
+					<div class="article_text_wrapper">
+						<p class="article_text">JULY 23, 2022</p>
+						<a href="pages/article.html">My new journey as a bootcamp student.</a>
+						<p class="article_text">
+							After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get
+							expert code reviews of my Solo Projects projects and meet like-minded peers.
+						</p>
+					</div>
 				</div>
-				<ul class="flex flex_row">
-					<li><a href="index.html">HOME</a></li>
-					<li><a href="pages/aboutme.html">ABOUT ME</a></li>
-				</ul>
-			</nav>
-		</header>
 
-		<main>
-			<div class="main_article">
-				<a href="pages/article.html">My new journey as a bootcamp student.</a>
-			</div>
-		</main>
+				<div class="articles_section">
+					<div class="other_articles_wrapper">
+						<div class="article">
+							<img src="images/article_2.png" alt="" />
+							<p>JULY 23, 2022</p>
+							<p>Blog two</p>
+							<p>
+								I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the
+								Frontend Developer Career Path.
+							</p>
+						</div>
 
-		<footer></footer>
+						<div class="article">
+							<img src="images/article_3.png" alt="" />
+							<p>JULY 23, 2022</p>
+							<p>Blog three</p>
+							<p>
+								I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the
+								Frontend Developer Career Path.
+							</p>
+						</div>
+
+						<div class="article">
+							<img src="images/article_4.png" alt="" />
+							<p>JULY 23, 2022</p>
+							<p>Blog four</p>
+							<p>
+								I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the
+								Frontend Developer Career Path.
+							</p>
+						</div>
+
+						<div class="article">
+							<img src="images/article_5.png" alt="" />
+							<p>JULY 23, 2022</p>
+							<p>Blog five</p>
+							<p>
+								I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the
+								Frontend Developer Career Path.
+							</p>
+						</div>
+
+						<div class="article">
+							<img src="images/article_6.png" alt="" />
+							<p>JULY 23, 2022</p>
+							<p>Blog six</p>
+							<p>
+								I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the
+								Frontend Developer Career Path.
+							</p>
+						</div>
+
+						<div class="article">
+							<img src="images/article_1.png" alt="" />
+							<p>JULY 23, 2022</p>
+							<p>Blog one</p>
+							<p>
+								I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the
+								Frontend Developer Career Path.
+							</p>
+						</div>
+					</div>
+					<p>View More</p>
+				</div>
+			</main>
+
+			<footer>
+				<p>My Learning Journal</p>
+				<p>Copyright ©2022</p>
+			</footer>
+		</div>
 	</body>
 </html>
