--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -2,31 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta
-			http-equiv="X-UA-Compatible"
-			content="IE=edge"
-		/>
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<link
-			rel="preconnect"
-			href="https://fonts.googleapis.com"
-		/>
-		<link
-			rel="preconnect"
-			href="https://fonts.gstatic.com"
-			crossorigin
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap"
-			rel="stylesheet"
-		/>
-		<link
-			rel="stylesheet"
-			href="../style.css"
-		/>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="../style.css" />
 		<title>About Me</title>
 	</head>
 
@@ -34,11 +15,7 @@
 		<header>
 			<nav>
 				<div class="logo_container">
-					<img
-						src="../images/logo.png"
-						alt="My learning journal logo"
-						width="34px"
-					/>
+					<img src="../images/logo.png" alt="My learning journal logo" width="34px" />
 					<p>My learning journal</p>
 				</div>
 				<ul class="flex flex_row">
@@ -50,6 +27,9 @@
 
 		<main></main>
 
-		<footer></footer>
+		<footer>
+			<p>My Learning Journal</p>
+			<p>Copyright ©2022</p>
+		</footer>
 	</body>
 </html>
