--- a/index.html
+++ b/index.html
@@ -2,12 +2,31 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet" />
-		<link rel="stylesheet" href="style.css" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="IE=edge"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="style.css"
+		/>
 		<title>Learning Journal</title>
 	</head>
 
@@ -16,7 +35,11 @@
 			<header>
 				<nav>
 					<div class="logo_container">
-						<img src="images/logo.png" alt="My learning journal logo" width="34px" />
+						<img
+							src="images/logo.png"
+							alt="My learning journal logo"
+							width="23px"
+						/>
 						<p>My learning journal</p>
 					</div>
 					<ul class="flex flex_row">
@@ -28,8 +51,8 @@
 
 			<main>
 				<div class="main_article">
-					<div class="article_text_wrapper">
-						<p class="article_text">JULY 23, 2022</p>
+					<div class="article_headline_wrapper">
+						<p class="article_text_date">JULY 23, 2022</p>
 						<a href="pages/article.html">My new journey as a bootcamp student.</a>
 						<p class="article_text">
 							After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get
@@ -41,7 +64,10 @@
 				<div class="articles_section">
 					<div class="other_articles_wrapper">
 						<div class="article">
-							<img src="images/article_2.png" alt="" />
+							<img
+								src="images/article_2.png"
+								alt=""
+							/>
 							<p>JULY 23, 2022</p>
 							<p>Blog two</p>
 							<p>
@@ -51,7 +77,10 @@
 						</div>
 
 						<div class="article">
-							<img src="images/article_3.png" alt="" />
+							<img
+								src="images/article_3.png"
+								alt=""
+							/>
 							<p>JULY 23, 2022</p>
 							<p>Blog three</p>
 							<p>
@@ -61,7 +90,10 @@
 						</div>
 
 						<div class="article">
-							<img src="images/article_4.png" alt="" />
+							<img
+								src="images/article_4.png"
+								alt=""
+							/>
 							<p>JULY 23, 2022</p>
 							<p>Blog four</p>
 							<p>
@@ -71,7 +103,10 @@
 						</div>
 
 						<div class="article">
-							<img src="images/article_5.png" alt="" />
+							<img
+								src="images/article_5.png"
+								alt=""
+							/>
 							<p>JULY 23, 2022</p>
 							<p>Blog five</p>
 							<p>
@@ -81,7 +116,10 @@
 						</div>
 
 						<div class="article">
-							<img src="images/article_6.png" alt="" />
+							<img
+								src="images/article_6.png"
+								alt=""
+							/>
 							<p>JULY 23, 2022</p>
 							<p>Blog six</p>
 							<p>
@@ -91,7 +129,10 @@
 						</div>
 
 						<div class="article">
-							<img src="images/article_1.png" alt="" />
+							<img
+								src="images/article_1.png"
+								alt=""
+							/>
 							<p>JULY 23, 2022</p>
 							<p>Blog one</p>
 							<p>
