--- a/pages/article.html
+++ b/pages/article.html
@@ -2,34 +2,140 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet" />
-		<link rel="stylesheet" href="../style.css" />
+		<meta
+			http-equiv="X-UA-Compatible"
+			content="IE=edge"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Source+Sans+Pro:wght@400;600;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="../style.css"
+		/>
 		<title>Article</title>
 	</head>
 
 	<body>
-		<header>
-			<nav>
-				<div class="logo_container">
-					<img src="../images/logo.png" alt="My learning journal logo" width="34px" />
-					<p>My learning journal</p>
+		<div class="wrapper">
+			<header>
+				<nav>
+					<div class="logo_container">
+						<img
+							src="../images/logo.png"
+							alt="My learning journal logo"
+							width="23px"
+						/>
+						<p>My learning journal</p>
+					</div>
+
+					<ul class="flex flex_row">
+						<li><a href="../index.html">HOME</a></li>
+						<li><a href="aboutme.html">ABOUT ME</a></li>
+					</ul>
+				</nav>
+			</header>
+
+			<main>
+				<div class="article_content">
+					<div class="article_headline_wrapper content_text_wrapper">
+						<p class="article_text_date">JULY 23, 2022</p>
+						<h1>My new journey as a bootcamp student.</h1>
+						<p class="article_text">
+							After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get
+							expert code reviews of my Solo Projects projects and meet like-minded peers.
+						</p>
+					</div>
+
+					<img
+						src="../images/hero_img.png"
+						alt="laptop besides a desk light with a view out the window"
+						width="100%"
+					/>
+
+					<div class="content_text_wrapper">
+						<h2 class="articlepage_h2">How I stay committed to learning</h2>
+						<p class="articlepage_p">
+							I like to think of myself as a lifelong learner. I used to spend hours and hours learning, then try to create simple
+							projects using what I learned or work new techniques into existing projects. While that was fun, I felt like it would be
+							helpful to share what I was learning and most things about my journey with the world.
+						</p>
+
+						<h2 class="articlepage_h2">How I got started</h2>
+						<p class="articlepage_p">
+							I started simple and gradually grew my learning journal site. I would take notes about what I was learning. After each
+							learning session, I'd use my notes to not only reflect on what I learned but also write short summaries of what I learned
+							using my own words. That helped me grok what I was learning, and I realized that posting my learning summaries was also
+							helping others learn and stay motivated.
+						</p>
+					</div>
 				</div>
-				<ul class="flex flex_row">
-					<li><a href="../index.html">HOME</a></li>
-					<li><a href="aboutme.html">ABOUT ME</a></li>
-				</ul>
-			</nav>
-		</header>
 
-		<main></main>
+				<div class="articles_section">
+					<h2 class="articlepage_h2 center_text">Recent Posts</h2>
 
-		<footer>
-			<p>My Learning Journal</p>
-			<p>Copyright ©2022</p>
-		</footer>
+					<div class="other_articles_wrapper">
+						<div class="article">
+							<img
+								src="../images/article_2.png"
+								alt=""
+							/>
+							<p>JULY 23, 2022</p>
+							<p>Blog two</p>
+							<p>
+								I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the
+								Frontend Developer Career Path.
+							</p>
+						</div>
+
+						<div class="article">
+							<img
+								src="../images/article_3.png"
+								alt=""
+							/>
+							<p>JULY 23, 2022</p>
+							<p>Blog three</p>
+							<p>
+								I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the
+								Frontend Developer Career Path.
+							</p>
+						</div>
+
+						<div class="article">
+							<img
+								src="../images/article_4.png"
+								alt=""
+							/>
+							<p>JULY 23, 2022</p>
+							<p>Blog four</p>
+							<p>
+								I'm excited to start a new learning journey as a Scrimba Bootcamp student! After several months of learning in the
+								Frontend Developer Career Path.
+							</p>
+						</div>
+					</div>
+					<p>View More</p>
+				</div>
+			</main>
+
+			<footer>
+				<p>My Learning Journal</p>
+				<p>Copyright ©2022</p>
+			</footer>
+		</div>
 	</body>
 </html>
